--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <h1>Course database</h1>
     <p>Search for course in databas</p>
     <form action="/submit" method="post">
-      <input name="firstname" type="text" />
+      <input name="firstname" type="text" placeholder="exempel 'BIO'"/>
       <button type="submit">Submit</button>
     </form>
     <table>
