kan nu registrera studen i kurser

--- a/static/style.css
+++ b/static/style.css
@@ -32,3 +32,8 @@ a:hover {
 td:hover {
     background-color: #29648a; /* Ändra bakgrundsfärgen när du hovrar över th-elementet */
 }
+
+.error-message {
+    color: red;
+    font-weight: bold;
+}
