--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,26 @@
 </head>
 <body>
     <th colspan="3"><h1>Course database</h1></th>
-    <p>Search for course_id in databas</p>
+    <p>Student Registration</p>
+
+    <form action="/register" method="post">
+        <label for="student_id">Student ID:</label>
+        <input type="text" name="student_id" required>
+        
+        <label for="course_id">Course ID:</label>
+        <input type="text" name="course_id" required>
+        
+        <button type="submit">Register</button>
+    </form>
+    {% if error_message %}
+        <p class="error-message">Error: {{ error_message }}</p>
+    {% endif %}
+
+    {% if insert %}
+        <h6>Registration successful! for {{student_id}}</h6>
+    {% endif %}
+
+    <p>Search for name in databas</p>
     <form action="/submit" method="post">
       <input name="course_id" type="text" placeholder="exempel 'BIO'"/>
       <button type="submit">Submit</button>
