--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,42 @@
 </head>
 <body>
     <th colspan="3"><h1>Course database</h1></th>
+    <p>Search for name in registration course</p>
+    <form action="/check" method="post">
+      <input name="student_id" type="text" placeholder="exempel 'Bert Karlsson'"/>
+      <button type="submit">Check</button>
+    </form>
+    <table>
+  <tbody>
+    {% if result %}
+    <thead>
+      <tr>
+        <th>Student</th>
+        <th>Name</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+      <p>Student(s) found:</p>
+      {% for row in result %}
+        <tr>
+          <td>{{row[0]}}</td>
+          <td>{{row[1]}}</td>
+          <td>{{row[2]}}</td>
+        </tr>
+      {% endfor %}
+    {% else %}
+      <p class="error-message">{{ error }}</p>
+    {% endif %}
+  </tbody>
+</table>
+
     <p>Student Registration</p>
 
     <form action="/register" method="post">
-        <label for="student_id">Student ID:</label>
-        <input type="text" name="student_id" required>
-        
+      <label for="student_id">Student ID:</label>
+        <input type="text" name="student_id" pattern="[0-9]{6}-[0-9]{4}" maxlength="11" placeholder="XXXXXX-XXXX" required title="Please enter a valid student ID in the format XXXXXX-XXXX">-
         <label for="course_id">Course ID:</label>
-        <input type="text" name="course_id" required>
+        <input type="text" name="course_id" maxlength="6" required>
         
         <button type="submit">Register</button>
     </form>
@@ -29,11 +57,12 @@
 
     <p>Search for name in databas</p>
     <form action="/submit" method="post">
-      <input name="course_id" type="text" placeholder="exempel 'BIO'"/>
-      <button type="submit">Submit</button>
+      <input name="course_id" type="text" placeholder="exempel 'Musik'"/>
+      <button type="submit">Search</button>
     </form>
     <table>
       <thead>
+        {%if query_result%}
         <th>Course_code</th>
         <th>Name</th>
         <th>Credits</th>
@@ -46,10 +75,6 @@
           <td>{{row[2]}}</td>
         </tr>
         {% endfor %}
-        {%if not query_result%}
-        <h1></h1>
-        Namnet hittades inte
-        <h1></h1>
         {%endif%}
       </tbody>
     </table>
