--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <th colspan="3"><h1>Course database</h1></th>
-    <p>Search for name in registration course</p>
+    <h4>Search for name in registration course</h4>
     <form action="/check" method="post">
       <input name="student_id" type="text" placeholder="exempel 'Bert Karlsson'"/>
       <button type="submit">Check</button>
@@ -37,13 +37,13 @@
   </tbody>
 </table>
 
-    <p>Student Registration</p>
+    <h4>Student Registration course</h4>
 
     <form action="/register" method="post">
       <label for="student_id">Student ID:</label>
         <input type="text" name="student_id" pattern="[0-9]{6}-[0-9]{4}" maxlength="11" placeholder="XXXXXX-XXXX" required title="Please enter a valid student ID in the format XXXXXX-XXXX">-
         <label for="course_id">Course ID:</label>
-        <input type="text" name="course_id" maxlength="6" required>
+        <input type="text" name="course_id" maxlength="6" placeholder="PHYS01" required>
         
         <button type="submit">Register</button>
     </form>
@@ -52,12 +52,12 @@
     {% endif %}
 
     {% if insert %}
-        <h6>Registration successful! for {{student_id}}</h6>
+        <h4>Registration successful! for {{student_id}}</h4>
     {% endif %}
-
-    <p>Search for name in databas</p>
+      <h1></h1>
+        <h1></h1>
     <form action="/submit" method="post">
-      <input name="course_id" type="text" placeholder="exempel 'Musik'"/>
+      <input name="course_id" type="text" placeholder="'search for course name'"/>
       <button type="submit">Search</button>
     </form>
     <table>
