--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+  <div class="main-content">
     <th colspan="3"><h1>Course database</h1></th>
     <h4>Search For Student In Registered Course</h4>
     <form action="/check" method="post">
@@ -94,5 +95,6 @@
         {%endif%}
       </tbody>
     </table>
+  </div>
 </body>
 </html>
