--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
       <label for="student_id">Student ID:</label>
         <input type="text" name="student_id" pattern="[0-9]{6}-[0-9]{4}" maxlength="11" placeholder="XXXXXX-XXXX" required title="Please enter a valid student ID in the format XXXXXX-XXXX">
         <label for="course_id">Course ID:</label>
-        <input type="text" name="course_id" maxlength="6" placeholder="Enter course_id" required>
+        <input type="text" name="course_id" maxlength="6" placeholder="Enter Course Id" required>
         <button type="submit">Register</button>
     </form>
     {% if error_message %}
@@ -58,7 +58,7 @@
     
       <h4>Remove Student from course</h4>
 
-      <form action="/delete_student" method="post">
+      <form action="/delete_student" method="POST">
         <label for="student_id">Student ID:</label>
           <input type="text" name="student" pattern="[0-9]{6}-[0-9]{4}" maxlength="11" placeholder="XXXXXX-XXXX" required title="Please enter a valid student ID in the format XXXXXX-XXXX">
           <label for="course_id">Course name:</label>
